# postgtk

./: .gitignore  README.md  main.c  meson.build
data/: postgtk.gresource.xml
data/ui/: window.ui
layout/ui/: window.ui
src/: app.c  app.h  request.c  window.c  window.h
src/services/: request.c  request.h
